--- a/.github/workflows/add_time.yml
+++ b/.github/workflows/add_time.yml
@@ -4,7 +4,8 @@ name: Add Godlike Server Time
 
 on:
   schedule:
-    - cron: "*/30 * * * *"  # 每30分钟触发一次
+    - cron: '0 */3 * * *'   # 每3小时运行一次
+    - cron: '30 1-23/3 * * *' # 从01:30开始，每3小时+90分钟运行一次（即90分钟间隔）
   workflow_dispatch:        # 允许手动触发
 
 jobs:
